--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,43 @@
-data/
 saved_models/
 results/
 temp/
 
-__pycache__/ 
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+
+# Data files
+data/
+*.csv
+*.json
+*.xlsx
+*.db
+*.sqlite
+
+# Virtual Environment
+venv/
+env/
+ENV/
+.venv
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Jupyter Notebook
+.ipynb_checkpoints/
+*.ipynb_checkpoints
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Environment variables
+.env
+.env.local
